Add cart and checkout screen

--- a/resources/public/stylesheets/screen.css
+++ b/resources/public/stylesheets/screen.css
@@ -20,3 +20,12 @@
   background-color: green;
   font-size: 2em;
 }
+
+.oops {
+  font-size: 3em;
+}
+
+.sad-panda {
+  margin-top: 0px;
+  font-size: 5em;
+}
